--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -18,7 +18,7 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: ${{ dhruvdabhi101 }}
+          github_user_name: ${{ github.dhruvdabhi101 }}
           outputs: dist/snake.svg
 
 
